Version 2.2.0.5
=================
bear:
- Added in some thread boosting to make quicker loading & seeking.
- Added in a seperate thread to the TSBuffer class.
- Updated the log fileWriter class with a buffer thread.
- Fixed a problem with the Demux code so the filter will now work better when changing streams.

Version 2.2.0.4
=================
bear:
Fixed a posible problem with the TSFileSinkPin where it was not stopping the receive thread when the filter was stopped.
Added a fix to the PAT parser code to fix a problem realised from germany.
Added a fix to the FindPin() function because it was not adding a reference to the pointer.
Added an extra test to exclude the Cyberlink Demux Filter from connecting, seems that it is unable to support MS Demux Interfaces Properly.

Version 2.2.0.3
=================
bear:
Fixed a problem in the PMT parser code that was causing false detection of extra streams for some files.
Added an function to get the available free disk space so the TSFileSink Filter will begin reusing the old files if the HDD runs out of space.
Fixed a crashing problem when used with other demux's that don't fully support the MS Demux interface methods like cyberlink.
Fixed some locking issues.
Fixed a PAT and ONIT parsing bug for UK users.
Fixed another locking bug as well as checked all of the other locks in the CTSFileSource Class.
Fixed a bug where the filter would lock if it was stopped before the pids were parsed.see PidParser().
Some minor changes to the update thread.

Version 2.2.0.2
=================
bear:
Fixed up some objects release issues.
Added in version information to the property pages.
I have had to reduce the fileWriter's sample size to stop the HDD clogging with multiple instances.
Changed back some file writing flags in the filewriter classes, this now allows for double buffereng on the FileWriter input Pin.
Added a TSThread Class to the TSFileSink filter Pin class to help with file cashing issues.