@@ -1,8 +1,10 @@
 Version 2.2.0.5
 =================
 bear:
-- Added in some thread boosting to make quicker loading & seeking.
-- Added in a seperate thread to the TSBuffer class.
+- Added some code to help reduce HDD clogging.
+- Added some code to allow playing the TSFileSink timeshift files from other locations i.e. over networks.
+- Added a seperate buffer thread to the TSBuffer class, seems to now seek faster.
+- Fixed a bug where it would not seek properly if the file had a pcr cross over. 
 - Updated the log fileWriter class with a buffer thread.
 - Fixed a problem with the Demux code so the filter will now work better when changing streams.
 
